kubernetes/backstage-deployment-local-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage-local
spec:
  selector:
    matchLabels:
      app: cdcr-development-portal
      backstage.io/kubernetes-id: cdcr-development-portal
  template:
    metadata:
      labels:
        app: cdcr-development-portal
        backstage.io/kubernetes-id: cdcr-development-portal
    spec:
      containers:
      - name: backstage
        volumeMounts:
        - name: catalog-teams
          mountPath: /catalog/cdcr-teams.yaml
          subPath: cdcr-teams.yaml
        - name: catalog-coast
          mountPath: /catalog/coast-system.yaml
          subPath: coast-system.yaml
        - name: catalog-discharge
          mountPath: /catalog/discharge-custody-check.yaml
          subPath: discharge-custody-check.yaml
        - name: catalog-info
          mountPath: /catalog/catalog-info.yaml
          subPath: catalog-info.yaml
        - name: app-config-local
          mountPath: /app/app-config.local.yaml
          subPath: app-config.local.yaml
      volumes:
      - name: catalog-teams
        configMap:
          name: backstage-catalog
      - name: catalog-coast
        configMap:
          name: backstage-catalog-coast
      - name: catalog-discharge
        configMap:
          name: backstage-catalog-discharge
      - name: catalog-info
        configMap:
          name: backstage-catalog-info
      - name: app-config-local
        configMap:
          name: backstage-app-config
